--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "express": "^4.16.4",
+    "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.6.0",
+    "@material-ui/icons": "^3.0.2",
+    "date-fns": "^2.0.0-alpha.27",
+    "material-ui-pickers": "^2.2.4",
+    "react-material-ui-form-validator": "^2.0.7",
+    "pg": "^7.8.2",
     "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -12,7 +19,8 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
